config/k8s/demo-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: demo-postgres
    app: demo
  name: demo-postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    service: demo-postgres
    app: demo
